--- a/sine_testing/Makefile
+++ b/sine_testing/Makefile
@@ -1,3 +1,8 @@
 PHONY: test
-test:
-	pytest test.py
+test: .venv
+	.venv/bin/pytest test.py
+
+.venv: requirements.txt
+	(test -d .venv || python3 -m venv .venv)
+	.venv/bin/pip install -r requirements.txt
+
