--- a/sine_testing/Makefile
+++ b/sine_testing/Makefile
@@ -6,4 +6,5 @@ test: .venv
 .venv: requirements.txt
 	(test -d .venv || python3 -m venv .venv)
 	.venv/bin/pip install -r requirements.txt
+	touch .venv
 
